--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,8 @@
 
     <string name="loader">Идет загрузка...</string>
 
+    <!-- КОДЫ ОШИБОК -->
+    <string name="invalid_data">Переданы не все данные!</string>
+    <string name="already_registered">Вы уже зарегистрированы!</string>
+
 </resources>
