--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,44 +3,37 @@
 
     <string name="enter_fio">Введите имя и фамилию:</string>
     <string name="enter_com">Введите название команды:</string>
-
     <string name="games">Игры:</string>
     <string name="money">Бюджет:</string>
     <string name="rep">Репутация:</string>
     <string name="league">Уровень:</string>
-
     <string name="app_name">Menu</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_1">Команда</string>
     <string name="menu_2">Выбор основы</string>
     <string name="menu_3">Цвета клуба</string>
-
     <string name="menu_4">Игры</string>
     <string name="menu_5">Чемпионат</string>
     <string name="menu_6">Эвенты</string>
-
     <string name="menu_7">Тренировки</string>
     <string name="menu_8">Стадион</string>
     <string name="menu_9">Бустеры</string>
-
     <string name="menu_10">Союзы</string>
     <string name="menu_11">Мой союз</string>
     <string name="menu_12">Битва союзов</string>
-
     <string name="menu_13">Рейтинг</string>
     <string name="menu_14">Помощь</string>
     <string name="menu_15">Правила</string>
-
     <string name="btn_back">Назад</string>
     <string name="btn_create">Создать</string>
-
     <string name="loader">Идет загрузка...</string>
     <string name="save">Сохранить</string>
 
     <!-- КОДЫ ОШИБОК -->
     <string name="invalid_data">Переданы не все данные!</string>
     <string name="already_registered">Вы уже зарегистрированы!</string>
+    <string name="title_activity_touch">TouchActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
